# IBM-1620-Mod1

./: .gitignore  README.md  plans.md  pyproject.toml  requirements.txt
data/source_pdfs/: README.md  Transistor Diode Cross Reference.txt
docs/: sprint_1_notes.md
ibm1620_parts/: __init__.py
src/ibm1620_parts/: __init__.py  cli.py  review_app.py
src/ibm1620_parts/export/: csv_exporter.py
src/ibm1620_parts/extractors/: parts_catalog.py
src/ibm1620_parts/ingest/: __init__.py  image_cache.py  pdf_indexer.py
src/ibm1620_parts/model/: repositories.py  schema.sql
src/ibm1620_parts/normalize/: text_cleanup.py
tests/: test_exports.py  test_parts_catalog.py  test_pdf_indexer.py  test_review_repository.py  test_schema.py  test_text_cleanup.py
