[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibm1620-parts-app"
version = "0.1.0"
description = "Sprint 1 CLI tooling for IBM 1620 PDF parts extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0.0",
    "pandas>=2.2.0",
    "PySide6>=6.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
